# GridFight

./: CMakeLists.txt  Doxyfile  main.cpp  todo-list
core/: BaseState.cpp  BaseState.h  CMakeLists.txt  Game.cpp  Game.h
core/object/: BaseUnit.cpp  BaseUnit.h  CMakeLists.txt  ConfigUnit.cpp  ConfigUnit.h  Grid.cpp  Grid.h  Group.cpp  Group.h  GroupFactory.cpp  GroupFactory.h  ImageObject.cpp  ImageObject.h
core/state/: Battle.cpp  Battle.h  CMakeLists.txt  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Quit.cpp  Quit.h  Skirmish.cpp  Skirmish.h
interface/: BaseController.cpp  BaseController.h  BaseRenderArea.cpp  BaseRenderArea.h  Button.cpp  Button.h  ButtonFactory.cpp  ButtonFactory.h  CMakeLists.txt  Color.cpp  Color.h  FormattedTextArea.cpp  FormattedTextArea.h  ImageButton.cpp  ImageButton.h  Position.cpp  Position.h  SFMLController.cpp  SFMLController.h  Style.cpp  Style.h  TextArea.cpp  TextArea.h  TextRectButton.cpp  TextRectButton.h  Wrap.cpp  Wrap.h
module/: module.cfg
system/: Event.h  Key.h  Mouse.h
test/: CMakeLists.txt
test/utility/: CMakeLists.txt  Color_Test.cpp  ConfigValidator_Test.cpp  Config_Test.cpp  Module_Test.cpp  test_config_file.cfg
test/utility/module_dir/: module.cfg  test_module_file.cfg
test/utility/module_dir/test_module/: error_module.cfg  module.cfg  module_desc.cfg
utility/: CMakeLists.txt  Color.cpp  Color.h  Config.cpp  Config.h  ConfigValidator.cpp  ConfigValidator.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  Point.h  SFMLUtility.cpp  SFMLUtility.h  Type.cpp  Type.h  Utility.cpp  Utility.h
(+10 files in other folders)
